Bug 26147 - Web Order: 'Add Special Instructions' text is cut off. Adjustment

--- a/skins/weborder/css/instructions.css
+++ b/skins/weborder/css/instructions.css
@@ -25,7 +25,7 @@
 .product_instructions .add_instructions {
     position: absolute;
     bottom: 10px;
-    left: 210px;
+    left: 195px;
     font-size: 15px;
     font-weight: bold;
     border-width: 2px;
@@ -34,6 +34,7 @@
     padding: 0 15px;
     cursor: pointer;
     line-height: 26px;
+    max-width: 205px;
 }
 
 .product_instructions .add_instructions.parent-product {
